# TinyHackathon

./: .gitignore  ReadMe.md  Rules.md  example_batch_inference.py  pyproject.toml
prompts/: coherence_more_detailed_scoring-reasoning.yaml  coherence_more_detailed_scoring.yaml  critical_reasoning_prompt.yaml  deephermes-reasoning.yaml  five_reasoning_prompt.yaml  simple_prompt.yaml  simple_reasoning_prompt.yaml  strength_weakness_prompt.yaml  supportive_decerning_prompt.yaml
test/: completion_script.py  test_generator.py
tinyhackathon/: generate_instruct.py  hf_upload.py  llm_scoring.py  scoring.py  submission.py  test.sh  test_generator.py
tinyhackathon/log_viewer/: app.py  run.py
tinyhackathon/log_viewer/templates/: base.html  compare_story.html  error.html  index.html  user_logs.html  view_log.html
tinyhackathon/score_explorer/: app.py  data_repository.py  run.py
tinyhackathon/score_explorer/static/css/: style.css  submission.css
tinyhackathon/score_explorer/static/js/: download-overlay.js  submission.js
tinyhackathon/score_explorer/templates/: all_leaderboards.html  base.html  compare_scores.html  download.html  error.html  home.html  index.html  leaderboard.html  leaderboards.html  macros.html  new_submission.html  submissions.html  user_submissions.html  users.html  view_submission.html
